--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                             </div>
                             <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Learn more about all you can do with Azure projects by visiting the documentation</a></div>
                         </div>
+			<div class="step">
+                            <div class="step-icon">
+                                <img src="img/lightbulbWhite.svg">
+                            </div>
+                            <div class="step-text"><a href="https://www.google.co.in/search?q=edureka&oq=edur&aqs=chrome.0.69i59j69i60l3j69i57j35i39.1758j0j7&sourceid=chrome&ie=UTF-8">Register at edureka</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
